styling bug on mobile view

--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -555,10 +555,9 @@ footer {
 
 @media (max-width: 500px) {
   .right-section {
-    margin-top: 0px;
+    margin-top: -85px;
     width: 100%;
     align-items: center;
-    /* background-color: red; */
   }
 }
 
@@ -617,7 +616,7 @@ footer {
   header {
     display: flex;
     flex-direction: column;
-    height: 110px;
+    height: 150px;
   }
 }
 @media (max-width: 500px) {
@@ -627,6 +626,7 @@ footer {
     padding-left: 40px;
     padding-top: 10px;
     align-items: center;
+    height: 180px;
   }
 }
 @media (max-width: 500px) {
@@ -637,10 +637,10 @@ footer {
     width: 100px;
     margin-right: 8px;
     color: white;
-    border-radius: 2px;
+    /* border-radius: 2px; */
     font-weight: bold;
-    padding-bottom: 8px;
-    font-family: "Raleway", sans-serif;
+    padding-bottom: 6px;
+    /* background-color: red; */
   }
 }
 
